Authentication/kube-apiserver.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kube-apiserver
  namespace: kube-system
spec:
  containers:
  - command:
    - kube-apiserver
    image: k8s.gcr.io/kube-apiserver-amd64:v1.11.3
    name: kube-apiserver
    volumeMounts:
    - mountPath: /tmp/users
    name: usr-details
    readOnly: true
  volumes:
  - hostPath:
    path: /tmp/users
    type: DirectoryOrCreate
    name: usr-details
